--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="card_number">Card Number</string>
     <string name="name_on_card">Name on Card</string>
     <string name="nickname">Nickname</string>
-    <string name="expiry">Expiry</string>
+    <string name="expiry">Expiry (MM/YY)</string>
 </resources>
