--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="name_on_card">Name on Card</string>
     <string name="nickname">Nickname</string>
     <string name="expiry">Expiry</string>
+    <string name="poseidon_god_mode_title">POSEIDON GOD MODE</string>
+    <string name="add_payment_card_text">Add payment card</string>
+    <string name="settings_text">Settings</string>
+    <string name="cancel_text">Cancel</string>
 </resources>
