--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="try_again">Try Again</string>
     <string name="cancel">Cancel</string>
     <string name="login_invalid_token">It appears that your token is invalid</string>
+    <string name="wallet_title">Wallet</string>
 </resources>
