--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="okay">Okay</string>
     <string name="location_permission_message">The Local Hero app needs your location for this functionality</string>
     <string name="location_permission_title">Location Permission Needed</string>
+    <string name="location_permission_settings_message">The Local Hero app needs your location for this functionality, this will take you to your settings</string>
+    <string name="location_permission_settings_title">Location Permission Needed</string>
 </resources>
